logo align, padding fix, reset.css add

--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -17,6 +17,7 @@ body {
     padding: 38px 0;
 }
 .logo {
+    padding-top: 4px;
     float: left;
     text-decoration: none;
     text-transform: uppercase;
@@ -45,7 +46,7 @@ body {
 }
 .nav-bar-link {
     width: 86px;
-    float: left;
+    display: block;
     text-decoration: none;
     text-transform: uppercase;
     font: normal 14px 'Open Sans', sans-serif;
@@ -111,11 +112,10 @@ h2::after {
     transform: rotate(65deg);
 }
 .product-title {
-    height: 40px;
     background-color: #323232;
 }
 .product-name {
-    padding: 10px 14px;
+    padding: 8px 14px;
     float: left;
     text-transform: uppercase;
     color: #ffffff;
@@ -124,17 +124,15 @@ h2::after {
     letter-spacing: -0.36px;
 }
 .product-price {
-    padding: 10px 14px;
-    display: inline-block;
+    padding: 8px 14px;
+    float: right;
     box-sizing: border-box;
     width: 56px;
-    height: 40px;
     background-color: rgba(255, 255, 255, 0.44);
     color: #ffffff;
     font: normal 18px 'Roboto', sans-serif;
     font-weight: 500;
     letter-spacing: -0.36px;
-    float: right;
 }
 /* FEATURED PRODUCTS END */
 .news-preview {
@@ -167,7 +165,8 @@ h3::after {
     top: 60px;
     width: 136px;
     height: 3px;
-    right: 55%;
+    right: 100%;
+    transform: translateX(100%);
     background-color: #4ec6ab;
 }
 p {
